[#929] Fix drawer alignment

--- a/frontend/src/modules/knowledge-library/styles.scss
+++ b/frontend/src/modules/knowledge-library/styles.scss
@@ -102,6 +102,12 @@
     .ant-drawer-mask {
       background-color: unset;
     }
+    .ant-drawer-left.ant-drawer-open {
+      left: 10px;
+      @-moz-document url-prefix() {
+        left: 0px;
+      }
+    }
 
     .ant-drawer-content-wrapper {
       box-shadow: none;
@@ -300,6 +306,9 @@
         }
         .ant-select-selection-item {
           background-color: transparent;
+          @-moz-document url-prefix() {
+            line-height: 15px;
+          }
         }
       }
 
@@ -1008,11 +1017,6 @@
     .ant-drawer-content-wrapper {
       zoom: 80%;
       height: 100% !important;
-
-      // @-moz-document url-prefix() {
-      //   min-height: 1003px !important;
-      //   transform: scale(0.7) translate(-107px, -220px);
-      // }
     }
 
     .ui-header {
@@ -1091,53 +1095,7 @@
           }
         }
       }
-
-      // @media (min-width: 511px) and (max-width: 715px) {
-      //   .ant-drawer-content-wrapper {
-      //     @-moz-document url-prefix() {
-      //       transform: scale(0.7) translate(-107px, -250px) !important;
-      //     }
-      //   }
-      // }
-
-      // @media (min-width: 716px) and (max-width: 735px) {
-      //   .ant-drawer-content-wrapper {
-      //     @-moz-document url-prefix() {
-      //       transform: scale(0.7) translate(-107px, -241px) !important;
-      //     }
-      //   }
-      // }
-
-      // @media (min-width: 733px) and (max-width: 748px) {
-      //   .ant-drawer-content-wrapper {
-      //     @-moz-document url-prefix() {
-      //       transform: scale(0.7) translate(-107px, -230px) !important;
-      //     }
-      //   }
-      // }
-
-      // @media (min-width: 947px) and (max-width: 750px) {
-      //   .ant-drawer-content-wrapper {
-      //     @-moz-document url-prefix() {
-      //       transform: scale(0.7) translate(-107px, -251px) !important;
-      //     }
-      //   }
-      // }
-
-      // @media (min-width: 401px) and (max-width: 950px) {
-      //   width: 100%;
-      // }
     }
-
-    // @media (min-width: 511px) and (max-width: 736px) {
-    //   .topic-view-drawer {
-    //     .ant-drawer-content-wrapper {
-    //       @-moz-document url-prefix() {
-    //         transform: scale(0.7) translate(-107px, -223px) !important;
-    //       }
-    //     }
-    //   }
-    // }
   }
 }
 
@@ -1146,14 +1104,11 @@
   .ant-picker-dropdown {
     zoom: 80%;
     @-moz-document url-prefix() {
-      transform: scale(0.7);
+      font-size: 12px;
     }
   }
   .overlay-zoom {
     zoom: 100%;
-    @-moz-document url-prefix() {
-      transform: scale(1);
-    }
   }
 }
 
